# Sreality

./: README.md  pyproject.toml
sreality_stat/: localization.py  main.py  parser.py  scraper.py
tests/: test_localization.py  test_main.py  test_parser.py
