[tool.poetry]
name = "sreality-stat"
version = "0.1.0"
description = ""
authors = ["Daniel Kopecký <kopecky.d@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
pandas = "^1.3.4"
geopy = "^2.2.0"
openpyxl = "^3.0.9"
arrow = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
